# gem_code

./: .env  .env_example  .gitignore  AGENTS.md  README.md  huge_file.jsonl  huge_file_index.json  main.py  mcp_config.example.json  mcp_config.json  package-lock.json  package.json  pyproject.toml  test.md  test.py  test_mcp_client.py  test_openai_response_api.py  test_tools.txt  test_write.txt
.VSCodeCounter/2026-03-03_19-26-14/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.humanize/ideas/: tui-�-20260515-123730.md
.humanize/plan_qa/: plan-qa.md
agentic_rl/: readme.md
agentic_rl/learning_materials/: grid.py
docs/: plan.md
evaluation/: build_harbor_matrix.py  install_gem_code.sh.j2  local_harbor_environment.py  my_external_agent.py  run_gem_code_once.py  run_harbor_matrix.py  run_swebench_verified.py
evaluation/harbor_matrix/: README.md  manifest.json
evaluation/reports/: gem-code-swebench-verified-smoke-1-v7.json  gem-code-swebench-verified-smoke-1-v7.md  gem-code-swebench-verified-smoke-1-v8.json  gem-code-swebench-verified-smoke-1-v8.md
examples/: session_manager_demo.py
src/: agent.py  cli.py  config.py  context_manager.py  mcp.py  mcp_client.py  memory.py  models.py  permissions.py  security.py  session.py  session_manager.py  skill.py  tool.py  tui.py
tests/: test_cli.py  test_cli_approval.py  test_config.py  test_context_manager.py  test_main.py  test_memory.py  test_permissions.py  test_security.py  test_session_gate.py  test_session_lazy_rebuild.py  test_tool.py  test_tui.py
(+93 files in other folders)
